[package]
name = "planet-renderer"
version = "0.1.0"
authors = ["Noah Craig <noahcraig123@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = "1.0.38"
console_error_panic_hook = "0.1.6"
log = "0.4.14"
console_log = "0.2.0"
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"
euclid = "0.22.1"

[dependencies.web-sys]
version = "0.3.47"
features = [
    "WebGlRenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer", "HtmlCanvasElement",
    "console"
]
