[package]
name = "planet-renderer"
version = "0.1.0"
authors = ["Noah Craig <noahcraig123@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = "1.0.38"
console_error_panic_hook = "0.1.6"
log = "0.4.14"
console_log = "0.2.0"
serde = { version = "1.0.123", features = ["derive"] }
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
js-sys = "0.3.47"
cgmath = "0.18.0"
genmesh = "0.6.2"

[dependencies.web-sys]
version = "0.3.47"
features = [
    "WebGlRenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer", "WebGlUniformLocation", 
    "HtmlCanvasElement", "console"
]
